[package]
name = "rprime"
version = "0.1.0"
authors = ["Eli Blaney <eliblaney@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.2.1"
log = { version = "0.4", features = ["serde"] }

[features]
default = ["object_names", "port_tracing", "queue_registration"]
object_names = []
port_tracing = []
queue_registration = []
